@@ -128,6 +128,9 @@ block.</p>
 statement.  A function uses <tt>return</tt> to return back a
 value.</p>
 
+<p>A return statement may contain an optional exit condition, similar
+to a loop exit statement.</p>
+
 <p><b>Ada</b>: AdaScript doesn't support creating new arithmetic
 operators by defining functions with operator symbols.</p>
 
